# fish-speech-gui

./: .gitignore  LICENSE  README.md  build.py  extra-requirements.txt  main.py  pyproject.toml
.github/workflows/: ci.yml
extra-hooks/: hook-pydantic.py
fish/: __main__.py  audio.py  chat.py  config.py  fap.py  file.py  gui.py  input.py
fish/locales/: en_US.yaml  ko_KR.yaml  zh_CN.yaml
fish/modules/: console.py  globals.py  log.py  network.py  registry.py  task.py  worker.py
fish/services/agent/: __init__.py  context.py  e2e.py  schema.py
fish/services/tts/: __init__.py  schema.py
fish/utils/: audio.py  i18n.py  schema.py
fish_audio_preprocess/cli/: __main__.py  convert_to_wav.py  length.py  loudness_norm.py  slice_audio.py  transcribe.py
fish_audio_preprocess/utils/: slice_audio_v3.py  transcribe.py
locales/: en_US.yaml  ko_KR.yaml  zh_CN.yaml
