[project]
name = "fish-speech-gui"
version = "1.4.5"
description = "fish-speech comfortable GUI"
readme = "README.md"
requires-python = "<3.12,>=3.10"
license = {text = "MIT"}
keywords = ["text-to-speech", "tts"]
authors = [
    {name = "lengyue", email = "lengyue@lengyue.me"},
    {name = "AnyaCoder", email = "a2983352531@outlook.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "noisereduce>=2.0.1",
    "sounddevice==0.4.6",
    "soundfile==0.12.1",
    "pyaudio==0.2.14",
    "pyyaml>=6.0",
    "PyQt6==6.5.0",
    "pyqt6-qt6==6.5.1",
    "pyqt6-sip==13.5.1",
    "pyqtdarktheme==2.1.0",
    "requests>=2.31.0",
    "pydantic==2.9.2",
    "ormsgpack==1.5.0",
    "numpy==1.24.3",
    "psutil>=6.1.0",
    "loguru>=0.7.2",
    "httpx==0.27.2",
]

[project.urls]
repository = "https://github.com/AnyaCoder/fish-speech-gui"

[project.gui-scripts]
fish = "main:main"

[tool.pdm]
distribution = true

[tool.setuptools]
packages=["fish"]

[tool.pdm.build]
packages = { find = { include = ["fish*"], exclude = ["assets", "locales"] } }

[tool.pdm.dev-dependencies]
dev = [
    "isort>=5.12.0",
    "black>=23.3.0",
    "pytest==7.3.1",
    "pyinstaller>=5.11.0",
    "nuitka>=2.4.11",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pdm.scripts]
lint = { shell = "black . && isort ." }
lint-check = { shell = "black --check . && isort --check ." }
test = { shell = "PYTHONPATH=. pytest -n=auto -q tests" }
docs = { shell = "sphinx-autobuild docs docs/_build/html" }

[[tool.pdm.source]]
type = "find_links"
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
verify_ssl = true

[tool.isort]
profile = "black"
extend_skip = ["dataset", "logs"]
